--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,48 @@
+/* Reset*/
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: #083b4c;
+}
+
+h1{
+    color: white;
+    text-align: center;
+    padding-top: 3.125rem;
+}
+
+/*Grid*/
+
+#table {
+    margin: 50px auto;
+    max-width: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 5.625rem;
+    height: 5.625rem;
+    background-color: antiquewhite;
+    margin: 5px;
+    line-height: 90px;
+    text-align: center;
+}
+
+.fizz {
+ background-color: rgb(221, 229, 225);
+}
+
+.buzz {
+ background-color: rgb(116, 123, 95);
+}
+
+.fizzbuzz {
+ background-color: rgb(186, 104, 33);
+}
+   
