--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ h1{
     width: 5.625rem;
     height: 5.625rem;
     background-color: antiquewhite;
+    font-size: 1.25rem;
+    color: rgb(50, 50, 97);
     margin: 5px;
     line-height: 90px;
     text-align: center;
@@ -39,10 +41,10 @@ h1{
 }
 
 .buzz {
- background-color: rgb(116, 123, 95);
+ background-color: rgb(243, 250, 228);
 }
 
 .fizzbuzz {
- background-color: rgb(186, 104, 33);
+ background-color: rgb(246, 195, 151);
 }
    
